Adding the preloader

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/horler408/portfolio_site#readme",
   "devDependencies": {
     "sass": "^1.26.11"
+  },
+  "dependencies": {
+    "spinkit": "^2.0.1"
   }
 }
